// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default .editorconfig 1`] = `
"root = true

[*]
indent_style = space
indent_size = 2
end_of_line = lf
insert_final_newline = true
trim_trailing_whitespace = true
"
`;

exports[`default .gitattributes 1`] = `
"* text eol=lf
*.png binary
"
`;

exports[`default .gitignore 1`] = `
"coverage/
lib/
node_modules/
"
`;

exports[`default .npmignore 1`] = `""`;

exports[`default .travis.yml 1`] = `
"language: node_js

node_js:
- 6
- 8
- stable

before_install:
- yarn global add codecov
- yarn global add greenkeeper-lockfile@1

before_script:
- greenkeeper-lockfile-update

script:
- yarn run lint
- yarn run test

after_script:
- codecov
- greenkeeper-lockfile-upload

cache:
  yarn: true
  directories:
  - node_modules

matrix:
  fast_finish: true
"
`;

exports[`default README.md 1`] = `
"# my-awesome-project

[![npm](https://img.shields.io/npm/v/my-awesome-project.svg)](https://www.npmjs.com/package/my-awesome-project)
[![build](https://img.shields.io/travis/ikatyang/my-awesome-project/master.svg)](https://travis-ci.org/ikatyang/my-awesome-project/builds)
[![coverage](https://img.shields.io/codecov/c/github/ikatyang/my-awesome-project/master.svg)](https://codecov.io/gh/ikatyang/my-awesome-project)
[![greenkeeper](https://badges.greenkeeper.io/ikatyang/my-awesome-project.svg)](https://greenkeeper.io/)

my awesome description

[Changelog](https://github.com/ikatyang/my-awesome-project/blob/master/CHANGELOG.md)

## Install

\`\`\`sh
# using npm
npm install --save my-awesome-project

# using yarn
yarn add my-awesome-project
\`\`\`

## Usage

\`\`\`ts
// sample code
\`\`\`

## Development

\`\`\`sh
# lint
yarn run lint

# build
yarn run build

# test
yarn run test
\`\`\`

## License

MIT © [Ika](https://github.com/ikatyang)
"
`;

exports[`default dependencies 1`] = `
Object {
  "dependencies": Array [
    "tslib",
  ],
  "dev_dependencies": Array [
    "@types/jest",
    "jest",
    "standard-version",
    "ts-jest",
    "tslint",
    "typescript",
    "prettier",
    "tslint-plugin-prettier",
    "tslint-config-prettier",
    "tslint-config-ikatyang",
    "prettier-config-ikatyang",
  ],
}
`;

exports[`default jest.config.js 1`] = `
"module.exports = {
  testEnvironment: 'node',
  moduleFileExtensions: ['ts', 'js', 'json'],
  testMatch: ['**/tests/**/*.ts', '**/*.test.ts'],
  transform: { '\\\\\\\\.ts$': 'ts-jest/preprocessor' },
  mapCoverage: true,
  coverageReporters: ['lcov', 'text-summary'],
  collectCoverage: !!process.env.CI,
  collectCoverageFrom: ['src/**/*.ts'],
  coverageThreshold: {
    global: {
      branches: 100,
      functions: 100,
      lines: 100,
      statements: 100,
    },
  },
};
"
`;

exports[`default package.json 1`] = `
"{
  \\"name\\": \\"my-awesome-project\\",
  \\"version\\": \\"1.0.0\\",
  \\"description\\": \\"my awesome description\\",
  \\"keywords\\": [
    \\"awesome\\",
    \\"keywords\\",
    \\"my\\"
  ],
  \\"main\\": \\"lib/index.js\\",
  \\"types\\": \\"lib/index.d.ts\\",
  \\"repository\\": \\"https://github.com/ikatyang/my-awesome-project\\",
  \\"homepage\\": \\"https://github.com/ikatyang/my-awesome-project#readme\\",
  \\"author\\": {
    \\"name\\": \\"Ika\\",
    \\"email\\": \\"ikatyang@gmail.com\\",
    \\"url\\": \\"https://github.com/ikatyang\\"
  },
  \\"license\\": \\"MIT\\",
  \\"scripts\\": {
    \\"prepublish\\": \\"npm run build\\",
    \\"lint\\": \\"tslint -p ./tsconfig.json --type-check\\",
    \\"test\\": \\"jest\\",
    \\"prebuild\\": \\"rm -rf ./lib\\",
    \\"build\\": \\"tsc -p ./tsconfig.build.json\\",
    \\"release\\": \\"standard-version\\"
  },
  \\"dependencies\\": {},
  \\"devDependencies\\": {},
  \\"engines\\": {
    \\"node\\": \\">= 6\\"
  },
  \\"files\\": [
    \\"/lib/**/*\\"
  ]
}
"
`;

exports[`default prettier.config.js 1`] = `
"module.exports = require('prettier-config-ikatyang');
"
`;

exports[`default src/index.ts 1`] = `""`;

exports[`default tsconfig.build.json 1`] = `
"{
  \\"extends\\": \\"./tsconfig.json\\",
  \\"include\\": [\\"src/index.ts\\"],
  \\"compilerOptions\\": {
    \\"rootDir\\": \\"src\\",
    \\"outDir\\": \\"lib\\"
  }
}
"
`;

exports[`default tsconfig.json 1`] = `
"{
  \\"compilerOptions\\": {
    \\"strict\\": true,
    \\"lib\\": [\\"es6\\"],
    \\"module\\": \\"commonjs\\",
    \\"declaration\\": true,
    \\"importHelpers\\": true
  },
  \\"include\\": [\\"src/**/*.ts\\", \\"tests/**/*.ts\\"]
}
"
`;

exports[`default tslint.json 1`] = `
"{
  \\"rulesDirectory\\": [\\"tslint-plugin-prettier\\"],
  \\"extends\\": [\\"tslint-config-ikatyang\\", \\"tslint-config-prettier\\"],
  \\"rules\\": {
    \\"prettier\\": true
  }
}
"
`;

exports[`enable_codecov = false .travis.yml 1`] = `
"language: node_js

node_js:
- 6
- 8
- stable

before_install:
- yarn global add greenkeeper-lockfile@1

before_script:
- greenkeeper-lockfile-update

script:
- yarn run lint
- yarn run test

cache:
  yarn: true
  directories:
  - node_modules

matrix:
  fast_finish: true
"
`;

exports[`enable_codecov = false README.md 1`] = `
"# my-awesome-project

[![npm](https://img.shields.io/npm/v/my-awesome-project.svg)](https://www.npmjs.com/package/my-awesome-project)
[![build](https://img.shields.io/travis/ikatyang/my-awesome-project/master.svg)](https://travis-ci.org/ikatyang/my-awesome-project/builds)
[![greenkeeper](https://badges.greenkeeper.io/ikatyang/my-awesome-project.svg)](https://greenkeeper.io/)

my awesome description

[Changelog](https://github.com/ikatyang/my-awesome-project/blob/master/CHANGELOG.md)

## Install

\`\`\`sh
# using npm
npm install --save my-awesome-project

# using yarn
yarn add my-awesome-project
\`\`\`

## Usage

\`\`\`ts
// sample code
\`\`\`

## Development

\`\`\`sh
# lint
yarn run lint

# build
yarn run build

# test
yarn run test
\`\`\`

## License

MIT © [Ika](https://github.com/ikatyang)
"
`;

exports[`enable_greenkeeper = false .travis.yml 1`] = `
"language: node_js

node_js:
- 6
- 8
- stable

before_install:
- yarn global add codecov

script:
- yarn run lint
- yarn run test

after_script:
- codecov

cache:
  yarn: true
  directories:
  - node_modules

matrix:
  fast_finish: true
"
`;

exports[`enable_greenkeeper = false README.md 1`] = `
"# my-awesome-project

[![npm](https://img.shields.io/npm/v/my-awesome-project.svg)](https://www.npmjs.com/package/my-awesome-project)
[![build](https://img.shields.io/travis/ikatyang/my-awesome-project/master.svg)](https://travis-ci.org/ikatyang/my-awesome-project/builds)
[![coverage](https://img.shields.io/codecov/c/github/ikatyang/my-awesome-project/master.svg)](https://codecov.io/gh/ikatyang/my-awesome-project)

my awesome description

[Changelog](https://github.com/ikatyang/my-awesome-project/blob/master/CHANGELOG.md)

## Install

\`\`\`sh
# using npm
npm install --save my-awesome-project

# using yarn
yarn add my-awesome-project
\`\`\`

## Usage

\`\`\`ts
// sample code
\`\`\`

## Development

\`\`\`sh
# lint
yarn run lint

# build
yarn run build

# test
yarn run test
\`\`\`

## License

MIT © [Ika](https://github.com/ikatyang)
"
`;

exports[`import_tslib = false dependencies 1`] = `
Object {
  "dependencies": Array [],
  "dev_dependencies": Array [
    "@types/jest",
    "jest",
    "standard-version",
    "ts-jest",
    "tslint",
    "typescript",
    "prettier",
    "tslint-plugin-prettier",
    "tslint-config-prettier",
    "tslint-config-ikatyang",
    "prettier-config-ikatyang",
  ],
}
`;

exports[`node_version = 4 .travis.yml 1`] = `
"language: node_js

node_js:
- 4
- 6
- 8
- stable

before_install:
- yarn global add codecov
- yarn global add greenkeeper-lockfile@1

before_script:
- greenkeeper-lockfile-update

script:
- yarn run lint
- yarn run test

after_script:
- codecov
- greenkeeper-lockfile-upload

cache:
  yarn: true
  directories:
  - node_modules

matrix:
  fast_finish: true
"
`;

exports[`node_version = 4 package.json 1`] = `
"{
  \\"name\\": \\"my-awesome-project\\",
  \\"version\\": \\"1.0.0\\",
  \\"description\\": \\"my awesome description\\",
  \\"keywords\\": [
    \\"awesome\\",
    \\"keywords\\",
    \\"my\\"
  ],
  \\"main\\": \\"lib/index.js\\",
  \\"types\\": \\"lib/index.d.ts\\",
  \\"repository\\": \\"https://github.com/ikatyang/my-awesome-project\\",
  \\"homepage\\": \\"https://github.com/ikatyang/my-awesome-project#readme\\",
  \\"author\\": {
    \\"name\\": \\"Ika\\",
    \\"email\\": \\"ikatyang@gmail.com\\",
    \\"url\\": \\"https://github.com/ikatyang\\"
  },
  \\"license\\": \\"MIT\\",
  \\"scripts\\": {
    \\"prepublish\\": \\"npm run build\\",
    \\"lint\\": \\"tslint -p ./tsconfig.json --type-check\\",
    \\"test\\": \\"jest\\",
    \\"prebuild\\": \\"rm -rf ./lib\\",
    \\"build\\": \\"tsc -p ./tsconfig.build.json\\",
    \\"release\\": \\"standard-version\\"
  },
  \\"dependencies\\": {},
  \\"devDependencies\\": {},
  \\"engines\\": {
    \\"node\\": \\">= 4\\"
  },
  \\"files\\": [
    \\"/lib/**/*\\"
  ]
}
"
`;

exports[`node_version = 4 tsconfig.json 1`] = `
"{
  \\"compilerOptions\\": {
    \\"strict\\": true,
    \\"lib\\": [\\"es6\\"],
    \\"module\\": \\"commonjs\\",
    \\"declaration\\": true,
    \\"importHelpers\\": true
  },
  \\"include\\": [\\"src/**/*.ts\\", \\"tests/**/*.ts\\"]
}
"
`;

exports[`prettier_config_preset = empty string dependencies 1`] = `
Object {
  "dependencies": Array [
    "tslib",
  ],
  "dev_dependencies": Array [
    "@types/jest",
    "jest",
    "standard-version",
    "ts-jest",
    "tslint",
    "typescript",
    "prettier",
    "tslint-plugin-prettier",
    "tslint-config-prettier",
    "tslint-config-ikatyang",
  ],
}
`;

exports[`project_keywords = "" package.json 1`] = `
"{
  \\"name\\": \\"my-awesome-project\\",
  \\"version\\": \\"1.0.0\\",
  \\"description\\": \\"my awesome description\\",
  \\"keywords\\": [],
  \\"main\\": \\"lib/index.js\\",
  \\"types\\": \\"lib/index.d.ts\\",
  \\"repository\\": \\"https://github.com/ikatyang/my-awesome-project\\",
  \\"homepage\\": \\"https://github.com/ikatyang/my-awesome-project#readme\\",
  \\"author\\": {
    \\"name\\": \\"Ika\\",
    \\"email\\": \\"ikatyang@gmail.com\\",
    \\"url\\": \\"https://github.com/ikatyang\\"
  },
  \\"license\\": \\"MIT\\",
  \\"scripts\\": {
    \\"prepublish\\": \\"npm run build\\",
    \\"lint\\": \\"tslint -p ./tsconfig.json --type-check\\",
    \\"test\\": \\"jest\\",
    \\"prebuild\\": \\"rm -rf ./lib\\",
    \\"build\\": \\"tsc -p ./tsconfig.build.json\\",
    \\"release\\": \\"standard-version\\"
  },
  \\"dependencies\\": {},
  \\"devDependencies\\": {},
  \\"engines\\": {
    \\"node\\": \\">= 6\\"
  },
  \\"files\\": [
    \\"/lib/**/*\\"
  ]
}
"
`;

exports[`tslint_config_preset with prefix \`tslint:\` dependencies 1`] = `
Object {
  "dependencies": Array [
    "tslib",
  ],
  "dev_dependencies": Array [
    "@types/jest",
    "jest",
    "standard-version",
    "ts-jest",
    "tslint",
    "typescript",
    "prettier",
    "tslint-plugin-prettier",
    "tslint-config-prettier",
    "prettier-config-ikatyang",
  ],
}
`;
